auth-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: microservices 
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: fdehech/k8sprojet-auth-api:latest  
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
  namespace: microservices  
spec:
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
