log-message-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  namespace: microservices  # Ajout du namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - name: log-message-processor
        image: fdehech/k8sprojet-log-message-processor:latest
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: log-message-processor-service
  namespace: microservices  # Ajout du namespace
spec:
  selector:
    app: log-message-processor
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
