todos-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  namespace: microservices  # Ajout du namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: todos-api
        image: fdehech/k8sprojet-todos-api:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api-service
  namespace: microservices  # Ajout du namespace
spec:
  selector:
    app: todos-api
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
