users-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: microservices  # Ajout du namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
      - name: users-api
        image: fdehech/k8sprojet-users-api:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: microservices  # Ajout du namespace
spec:
  selector:
    app: users-api
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
